fix z-index

--- a/app/assets/less.less
+++ b/app/assets/less.less
@@ -647,6 +647,7 @@ html, body {
 
 	.schema {
 		@width: 400px;
+        z-index: 1;
 		position: relative;
 		float: right;
 		clear: right;
